--- a/stylesheets/seriousFlat.less
+++ b/stylesheets/seriousFlat.less
@@ -398,6 +398,7 @@ float: left;
     ul li:before {
         content: ">";
         color: #FF8040;
+        padding-right: 2px;
     }
 }
 
@@ -655,7 +656,7 @@ li {
 
 
 .anchor {
-    top: -90px;
+    top: -120px;
     display: inline;
     position: relative;
 }
