--- a/stylesheets/seriousFlat.less
+++ b/stylesheets/seriousFlat.less
@@ -53,25 +53,45 @@ a:hover {
     right: 0px;
     margin-right: 0px;
     padding-bottom: 2px;
+    
+    .odd {
+    background-color: @white;
+    }
+    .even { 
+        background-color: @alternative;
+    }
 }
 
 #index, #jobManagement, #peta, #about {
  background-color: @white;   
 }
 
-.odd {
-    background-color: @active;
 
-}
-.even { 
-    background-color: @alternative;
-}
 
 .container {
     width: 100%;
 }
 #animationContainer {
     width: 100%;
+    #showContent {
+        width: auto;
+        border-radius: 1em;
+        margin-top:20px;  
+        margin-left: 22.5%;
+        z-index: 400;
+        background: @lightblue;
+        article {
+            padding-top: 3px;
+            padding-left: 1%;   
+            h2 {
+                margin-top: 0px;
+            }
+            ul li ul, ul ul{
+                padding-top: 7px;
+                padding-bottom: 7px;
+            }
+        }   
+    }
 }
 
 #impressum {
@@ -83,11 +103,12 @@ a:hover {
     padding-left: 1%;
     padding-right: 1%;
     
+     a {
+        color: grey;
+     }
+    
 }
 
-#impressum a {
-    color: grey;
-}
 
 .current_page_item {
     background: @white !important;
@@ -100,11 +121,7 @@ header {
     z-index: 1000;
     top: 0;
     left: 0;
-    background: @lightblue;
-    
-    
-        
-        
+    background: @lightblue;        
         h1 {
             font-size: 2em;
             line-height: 2.5;
@@ -164,13 +181,23 @@ header {
         }
         
         #mainnav {
-         float: left;
-        height: 70px;
+            float: left;
+            height: 70px;
             margin-top: 5%;
             .dropdowncontainer {
                 position: relative;
                 cursor: pointer;
                 z-index: 1000;
+            }
+           .dropdowncontainer li:before {
+               content: none;
+            }
+            .dropdowncontainer:before {
+                content: none;
+            }
+            .dropdowncontainer:hover > .submenu li:before {
+                opacity: 1;
+                content: none;
             }
             .dropdowncontainer:hover > .submenuInvisible {
                 display: inline-block!important;
@@ -181,11 +208,14 @@ header {
 
         }
 
+        
+
+
         #language {
             float: right;
             clear: both;
         }
-                #refresh {
+        #refresh {
             float: right;
             clear: both;
         }
@@ -216,6 +246,18 @@ body.active #menu {
     padding: 0;
     margin: 0;
     max-width: 300%;
+    tr {
+    padding: 0;
+    margin: 0;
+    overflow-x: scroll;
+    height: 400px;
+    }
+    tr td a img {
+    max-height: 350px;
+    padding: 0;
+    margin: 0;
+    }
+    
 }
 .gallerytablediv {
     max-height: 450px;
@@ -223,42 +265,13 @@ body.active #menu {
     overflow-x: scroll;
     overflow-y: hidden;
 }
-.gallerytable tr {
-    padding: 0;
-    margin: 0;
-    overflow-x: scroll;
-    height: 400px;
-}
 .gallerytable tr td {
     padding: 0;
     margin: 0;
     height: 400px;
 }
-.gallerytable tr td a img {
-    max-height: 350px;
-    padding: 0;
-    margin: 0;
-}
 
-#showContent {
-    width: auto;
-    border-radius: 1em;
-    margin-top:20px;  
-    margin-left: 22.5%;
-    z-index: 400;
-    background: @lightblue;
-    article {
-        padding-top: 3px;
-        padding-left: 1%;   
-        h2 {
-            margin-top: 0px;
-        }
-        ul li ul, ul ul{
-            padding-top: 7px;
-            padding-bottom: 7px;
-        }
-    }
-}
+
 
 #index {
  padding-top: 35px;
@@ -298,30 +311,34 @@ body.active #menu {
     
 
     background-color: none;
+    
+    li > a {
+    background-color: @lightblue;   
+    }
+    
+    li {
+        float: left;
+        display: inline;
+        padding-top: 4px;
+        z-index: 999;
+        background-color: none; 
+        
+    }
+    li a {
+        margin-top: 4px;
+        margin-left: 25%;
+}
+    
+    
         
 }
 
 
-.submenu > li > a {
-    background-color: @lightblue;   
-}
 
 .submenuInvisible {
     display: none !important;
 }
 
-.submenu > li {
-float: left;
-        display: inline;
-    padding-top: 4px;
-    z-index: 999;
-    background-color: none; 
-        
-}
-.submenu li a {
-    margin-top: 4px;
-    margin-left: 25%;
-}
 
 #onTopImg:hover {
     animation: bounceit 3s infinite linear;
@@ -340,6 +357,49 @@ float: left;
     min-width: 22%;
     z-index: 911;
     border-radius: 5px;
+    #top {
+        position:absolute;
+        bottom: .7%;
+        margin-left: 20%;
+        float: bottom;
+        max-height: 17%;
+        overflow: hidden;
+    }
+    #toc {
+        z-index: 911;
+        padding-left: 5px;
+        height: auto;
+        max-height: 85%;
+        overflow-y: auto;
+        overflow-x: auto;
+        background-color: @lightblue;
+        h2 {
+            margin-bottom: 2px;
+            margin-top: 30px;
+            text-align: center;
+        }
+    
+        ul {
+            margin-top: 1px;
+            padding-left: 7px;
+            margin-bottom: 7px;
+        }
+        ul li a {
+            width: auto;
+            max-width: 10%;
+            line-height: 1.5;
+            white-space: nowrap;
+        }   
+    
+        ul li a:hover {
+            color: @active;
+        }
+        ul li:before {
+            content: ">";
+            color: #FF8040;
+            padding-right: 2px;
+        }
+    }
 }
 
 #secondScroller {
@@ -356,51 +416,7 @@ float: left;
     border-radius: 5px;
 }
 
-#top {
-    position:absolute;
-    bottom: .7%;
-    margin-left: 20%;
-    float: bottom;
-    max-height: 17%;
-    overflow: hidden;
-}
-#toc {
-    z-index: 911;
-    padding-left: 5px;
-    height: auto;
-    max-height: 85%;
-    overflow-y: auto;
-    overflow-x: auto;
-    background-color: @lightblue;
-    
-    h2 {
-      margin-bottom: 2px;
-      margin-top: 30px;
-      text-align: center;
-    }
-    
-    ul {
-        margin-top: 1px;
-        padding-left: 7px;
-        margin-bottom: 7px;
-    }
-    ul li a {
-        width: auto;
-        max-width: 10%;
-        line-height: 1.5;
-        white-space: nowrap;
-    }
-    
-    ul li a:hover {
-        color: @active;
-    }
-    
-    ul li:before {
-        content: ">";
-        color: #FF8040;
-        padding-right: 2px;
-    }
-}
+
 
 
 
@@ -451,9 +467,7 @@ float: left;
         -webkit-transform: scale(1);
     }
 }
-.dropdowncontainer:before {
-    content: none;
-}
+
 #tocButton {
     cursor: pointer;
     float: right;
@@ -581,13 +595,7 @@ float: left;
 }
 
 
-.dropdowncontainer li:before {
-    content: none;
-}
-.dropdowncontainer:hover > .submenu li:before {
-    opacity: 1;
-    content: none;
-}
+
 #aboutImg {
      filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); 
     -webkit-filter: grayscale(100%);
