update the kind of content

--- a/stylesheets/seriousFlat.less
+++ b/stylesheets/seriousFlat.less
@@ -20,10 +20,17 @@
     src: local('Shadows Into Light'), local('ShadowsIntoLight'), url(shadows.woff) format('woff');
 }
 
+.aboutSubmenubutton{
+    cursor:pointer;
+}
+.aboutSubmenubutton:hover {
+    color: blue;
+}
+
 .tocClass {
     li {
         a {
-            width:300px%;
+            width:300px;
         }
         
     }
