--- a/stylesheets/seriousFlat.css
+++ b/stylesheets/seriousFlat.css
@@ -11,8 +11,14 @@
   font-weight: 400;
   src: local('Shadows Into Light'), local('ShadowsIntoLight'), url(shadows.woff) format('woff');
 }
+.aboutSubmenubutton {
+  cursor: pointer;
+}
+.aboutSubmenubutton:hover {
+  color: blue;
+}
 .tocClass li a {
-  width: 300px%;
+  width: 300px;
 }
 body {
   margin: 0;
